# simple-zmq-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: .CMakeLists.txt.swp  CMakeLists.txt
demo/src/: .main.cc.swp  main.cc
include/: Client.hh  Server.hh  simplezmqserver.hh
src/: Client.cc  Server.cc  main.cc
